--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,14 +1,3 @@
 body{
-  font-family: 'Slabo 27px', serif;
-}
-
-.trivia-cont{
-  width: 300px;
-  display: none;
-  padding: 20px;
-  background: white;
-}
-
-.winner-cont{
-  display: none;
+  margin: 0;
 }
